--- a/pom.xml
+++ b/pom.xml
@@ -43,5 +43,16 @@
   		<artifactId>slf4j-api</artifactId>
   		<version>1.7.7</version>
   	</dependency>
+	  <dependency>
+		  <groupId>org.projectlombok</groupId>
+		  <artifactId>lombok</artifactId>
+		  <version>1.14.4</version>
+	  </dependency>
+	  <dependency>
+		  <groupId>junit</groupId>
+		  <artifactId>junit</artifactId>
+		  <version>4.12</version>
+		  <scope>test</scope>
+	  </dependency>
   </dependencies>
 </project>
