--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.github.0312birdzhang</groupId>
+  <groupId>com.crazyitn</groupId>
   <artifactId>Zabbix4j</artifactId>
-  <version>0.1.7</version>
+  <version>0.1.10</version>
   <name>Zabbix4j</name>
   <description>java api for zabbix</description>
   <build>
